--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Partner/AdressenPflege/AdressenGrid.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Partner/AdressenPflege/AdressenGrid.cshtml
@@ -2,7 +2,7 @@
 @using DocumentFormat.OpenXml.Wordprocessing
 @using GeneralTools.Resources
 @{
-    var gridName = "GridAdressen";
+    var gridName = "GridAdresse";
     var currentController = ViewContext.RouteData.GetRequiredString("controller");
     var addressSelectorAvailable = (bool)(ViewData["AddressSelectorAvailable"] ?? false);
     var backButtonAvailable = (bool)(ViewData["BackButtonAvailable"] ?? false);
@@ -29,14 +29,14 @@
                 {
                     columns.XBound(c => c.KundenNr).Width(145).Title("").Filterable(false).Sortable(false)                    
                     .ClientTemplate(                  
-                         "<input type='checkbox' name='checkedRecords' <# if (data.IsSelected) { #> checked <# } #> value='<#= data.KundenNr #>' onchange='OnSelectionChange_GridAdressen($(this))' />" +
+                         "<input type='checkbox' name='checkedRecords' <# if (data.IsSelected) { #> checked <# } #> value='<#= data.KundenNr #>' onchange='OnSelectionChange_GridAdresse($(this))' />" +
                             (!addressSelectorAvailable ?
                                     "" : "<a href='#' onclick='return AddressSelect(\"<#= data.KundenNr #>\");' class='btn mini blue margin-right-5 tooltips' data-original-title='" + CommonResources.PickAddress + "' data-placement='right'><i class='halflings-icon white ok'></i></a>")
                               + "<a href='#' onclick='return AddressEdit(\"<#= data.KundenNr #>\");' class='btn mini gray tooltips' data-original-title='" + CommonResources.EditAddress + "' data-placement='right'><i class='halflings-icon white pencil'></i></a>"
                               + (!zulassungAvailable ?
                                     "" : "<a href='../../autohaus/zulassung/index?halterNr=<#= data.KundenNr #>' class='btn mini gray margin-left-10 tooltips' data-original-title='" + Localize.VehicleRegister + "' data-placement='right'><i class='halflings-icon white tag'></i></a>")
                         ).HeaderTemplate(
-                         "<span class='tooltips' data-original-title='" + Localize.MultiSelectCheckAllFilteredItems + "' data-placement='right'><input type='checkbox' id='checkAllRecords' onchange='GridAdressen_OnAllSelectionChange($(this))' /></span>" +
+                         "<span class='tooltips' data-original-title='" + Localize.MultiSelectCheckAllFilteredItems + "' data-placement='right'><input type='checkbox' id='checkAllRecords' onchange='GridAdresse_OnAllSelectionChange($(this))' /></span>" +
                             (backButtonAvailable ?
                                 "<a href='#' onclick='return ClosePartnerAddressGrid();' class='btn mini black margin-right-5 tooltips' data-original-title='" + Localize.Back + "' data-placement='right'><i class='halflings-icon white chevron-left'></i></a>" : "")
                             + "<a href='#' onclick='return AddressNew();' class='btn mini black tooltips' data-original-title='" + CommonResources.NewAddress + "' data-placement='right'><i class='halflings-icon white plus'></i></a>"
