--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/AdressenPflege/AdresseCommon.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/AdressenPflege/AdresseCommon.cshtml
@@ -40,6 +40,10 @@
     function OnDataBound_GridAdresse() {
         FilteredData_Grid_OnDataBound($(this));
         $('.tooltips').tooltip();
+
+        // class=checker ...
+        App.initUniform();
+        //Grid_PrepareMultiRowSelected("GridAdressen");
     }
 
     function OnColumnShowHide_GridAdresse() {
@@ -153,6 +157,64 @@
             }
         });
     }
+
+    function OnSelectionChange_GridAdresse(cb) {
+
+        Grid_FormatMultiRowSelected(cb);
+
+        $.ajax({
+            type: "POST",
+            url: "AdsressenAuswahlSelectionChanged",
+            data: { id: cb.val(), isChecked: cb.is(':checked') },
+            loadingShow: false,
+            success: function (result) {
+                var count = result.allSelectionCount;
+                if (count === 0) {
+                    $("#AdressenAuswahlCount").addClass('hide');
+                    return;
+                }
+                $("#AdressenAuswahlCount").removeClass('hide');
+                $("#AdressenAuswahlCount > span").html('Sie haben ' + count + ' Adresse' + (count == 1 ? '' : 'n') + ' ausgewählt!');
+            }
+        });
+    }
+
+    function GridAdresse_OnAllSelectionChange(cb) {
+        var check = cb.is(':checked');
+        $.ajax({
+            type: "POST",
+            url: "AdsressenAuswahlSelectionChanged",
+            data: { id: "", isChecked: check },
+            loadingShow: true,
+            success: function (result) {
+                result.allSelected = result.allSelectionCount === result.allCount;
+                GridAdresse_MultiSelectUpdate(result.allSelectionCount, result.allSelected);
+
+                $("#csv-upload-reset > span.found-count").text(result.allFoundCount);
+                $("#csv-upload-reset > span.all-count").text(result.allCount);
+                FilterGrid("GridAdresse");
+            }
+        });
+    }
+
+    function GridAdresse_MultiSelectUpdate(count, allSelected) {
+        //alert(allSelected);
+        var cb = $("input[name=checkedRecords]");
+
+        if (count == 0) {
+            $("#AdressenAuswahlCount").addClass('hide');
+            $("#checkAllRecords").attr("checked", allSelected);
+            cb.parents().removeClass("checked");
+            return;
+        }
+
+        $("#AdressenAuswahlCount").removeClass('hide');
+        $("#AdressenAuswahlCount > span").html('Sie haben ' + count + ' Adresse' + (count == 1 ? '' : 'n') + ' ausgewählt!');
+        $(".checkedRecords").attr("checked", allSelected);
+
+        cb.parents().addClass("checked");
+    }
+
 
 </script>
 
