zusätzliche Selektion "nur temporärer Versand"

--- a/inetpub/wwwroot/ServicesMvc/Views/Equi/Bestand/EquiSuche.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Equi/Bestand/EquiSuche.cshtml
@@ -23,7 +23,9 @@
 
             @Html.FormRadioButtonListFor(m => m.FahrzeugeMitZulassungsStatus, EquiGrunddatenSelektor.FahrzeugeZulassungsStatusWerte.ToSelectList(), new { @class = "m-wrap", col = "left" })
             @Html.FormCheckBoxFor(m => m.NurAbgemeldeteFahrzeuge, new { col = "right" }, labelHidden:true)
-            
+
+            @Html.FormCheckBoxFor(m => m.NurTemporaererVersand, labelHidden: true)
+
 
             @*@Html.FormRequiredFieldsSummary()*@
 
