--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Partner/AdressenPflege/AdressenGrid.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Partner/AdressenPflege/AdressenGrid.cshtml
@@ -63,6 +63,9 @@
                 })
               )
 
+         <div class="form-actions">
+            <button type="button" id="btnAddresseLoeschen" class="btn yellow hide" onclick="AdressenLoeschen();">@Localize.Delete</button>
+         </div>
     </div>
 </div>
 
