--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/FahrzeugdatenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/FahrzeugdatenForm.cshtml
@@ -14,7 +14,8 @@
     if (isMassenzulassung) { Model.FahrgestellNr = "MASSENZULASSUNG"; }
     if (isMassenabmeldung) { Model.FahrgestellNr = "MASSENABMELDUNG"; }
 
-    var fahrzeugfarbenList = (List<Domaenenfestwert>)ViewData["FahrzeugfarbenList"];  
+    var fahrzeugfarbenList = (List<Domaenenfestwert>)ViewData["FahrzeugfarbenList"];
+    var isFromShoppingCart = Zulassungsdaten.GetZulassungViewModel().ZulassungFromShoppingCart;
 }
 
 <style>
@@ -334,25 +335,28 @@
                     .XAjaxDataBinding("FahrzeugAuswahlAjaxBinding", "Zulassung")    // Fahrzeugliste anzeigen
                       .Columns(columns =>
                       {
-                          columns.XBound(c => c.FinID).Visible(false);
+                      columns.XBound(c => c.FinID).Visible(false);
 
-                        columns.XBound(c => c.Aktion).Filterable(false).ClientTemplate(
-                            "<button onclick='return ZulassungVehicleRemove(\"<#= data.FinID #>\");' class='btn mini gray tooltips' data-original-title='" + Localize.VehicleDelete + "' data-placement='right'><i class='halflings-icon white remove'></i></button>");
+                          if (!isFromShoppingCart)
+                          {
+                              columns.XBound(c => c.Aktion).Filterable(false).ClientTemplate(
+                                  "<button onclick='return ZulassungVehicleRemove(\"<#= data.FinID #>\");' class='btn mini gray tooltips' data-original-title='" + Localize.VehicleDelete + "' data-placement='right'><i class='halflings-icon white remove'></i></button>");
+                          }
 
-                        columns.XBound(c => c.FIN).ClientTemplate(
-                                Html.TextBox("FIN", "<#= data.FIN #>", new Dictionary<string, object> { { "class", "m-wrap medium uppercase editvinvalue" }, { "data-fieldname", "FIN" } }).ToHtmlString()
-                            ).Title(Localize.VIN + " <span class='requiredField requiredFieldMarker'>*</span>");
-                          
-                        columns.XBound(c => c.HandelsName).ClientTemplate(
-                                Html.TextBox("HandelsName", "<#= data.HandelsName #>", new Dictionary<string, object> { { "class", "m-wrap medium editvinvalue" }, { "data-fieldname", "HandelsName" } }).ToHtmlString()
-                            );
+                          columns.XBound(c => c.FIN).ClientTemplate(
+                                  Html.TextBox("FIN", "<#= data.FIN #>", new Dictionary<string, object> { { "class", "m-wrap medium uppercase editvinvalue" }, { "data-fieldname", "FIN" } }).ToHtmlString()
+                              ).Title(Localize.VIN + " <span class='requiredField requiredFieldMarker'>*</span>");
 
-                        columns.XBound(c => c.FzgModell).ClientTemplate("<input type='text' class='editvinvalue etikettcol' data-fieldname='FzgModell' value='<#= data.FzgModell #>' />").Title(Localize.Model + " <span class='requiredField requiredFieldMarker'>*</span>");
-                        columns.XBound(c => c.Farbe).ClientTemplate("<input type='text' class='inputwidth colorautocomplete etikettcol' data-fieldname='Farbe' value='<#= data.Farbe #>' />").Title(Localize.Color + " <span class='requiredField requiredFieldMarker'>*</span>");
+                          columns.XBound(c => c.HandelsName).ClientTemplate(
+                                  Html.TextBox("HandelsName", "<#= data.HandelsName #>", new Dictionary<string, object> { { "class", "m-wrap medium editvinvalue" }, { "data-fieldname", "HandelsName" } }).ToHtmlString()
+                              );
 
-                        columns.XBound(c => c.ZulassungFahrzeugartId).ClientTemplate(
-                                Html.DropDownList("ZulassungFahrzeugartId", Fahrzeugdaten.FahrzeugartList.ToSelectList(), new Dictionary<string, object> { { "class", "m-wrap small editvinvalue" }, { "data-fieldname", "ZulassungFahrzeugartId" } }).ToHtmlString()
-                            );
+                          columns.XBound(c => c.FzgModell).ClientTemplate("<input type='text' class='editvinvalue etikettcol' data-fieldname='FzgModell' value='<#= data.FzgModell #>' />").Title(Localize.Model + " <span class='requiredField requiredFieldMarker'>*</span>").Hidden(!Model.HasEtikett);
+                          columns.XBound(c => c.Farbe).ClientTemplate("<input type='text' class='inputwidth colorautocomplete etikettcol' data-fieldname='Farbe' value='<#= data.Farbe #>' />").Title(Localize.Color + " <span class='requiredField requiredFieldMarker'>*</span>").Hidden(!Model.HasEtikett);
+
+                          columns.XBound(c => c.ZulassungFahrzeugartId).ClientTemplate(
+                                  Html.DropDownList("ZulassungFahrzeugartId", Fahrzeugdaten.FahrzeugartList.ToSelectList(), new Dictionary<string, object> { { "class", "m-wrap small editvinvalue" }, { "data-fieldname", "ZulassungFahrzeugartId" } }).ToHtmlString()
+                          );
                       })
                       .XPageSize(10)
                       .XAutoColumnConfiguration()
@@ -360,13 +364,16 @@
                       .XSort(sortOrder => sortOrder.Add(c => c.FIN).Ascending())
                     .XToolBar("Zulassung")
                           )
-        
-            <div class="form-actions clearfix">
-                <div class="pull-left">
-                    @Html.TextBoxFor(m => m.AnzahlHinzuzufuegendeFahrzeuge, new { @class = "m-wrap tiny", maxlength = 3 })
-                    <button class="btn blue" onclick="ZulassungVehicleAdd();">@Localize.AddVehicleVehicles</button>
+
+            if (!isFromShoppingCart)
+            {
+                <div class="form-actions clearfix">
+                    <div class="pull-left">
+                        @Html.TextBoxFor(m => m.AnzahlHinzuzufuegendeFahrzeuge, new { @class = "m-wrap tiny", maxlength = 3 })
+                        <button class="btn blue" onclick="ZulassungVehicleAdd();">@Localize.AddVehicleVehicles</button>
+                    </div>
                 </div>
-            </div>
+            }
         }
     }
     
