--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Partner/AdressenPflege/AdressenGrid.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Partner/AdressenPflege/AdressenGrid.cshtml
@@ -63,9 +63,10 @@
                 })
               )
 
-         <div class="form-actions">
+        <div class="form-actions">          
+            <button type="button" id="btnAddresseNeu" class="btn red" onclick="AddressNew();">@Localize.NewAddress</button>             
             <button type="button" id="btnAddresseLoeschen" class="btn yellow hide" onclick="AdressenLoeschen();">@Localize.Delete</button>
-         </div>
+        </div>
     </div>
 </div>
 
