--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Partner/AdressenPflege/AdressenGrid.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Partner/AdressenPflege/AdressenGrid.cshtml
@@ -13,7 +13,7 @@
     <div id="divGridEditStart">
 
         <h4>
-            <span>@Localize.PleaseChooseOneOrMoreVehicles</span>
+            <span>@Localize.PleaseEditOrDeleteAdresses</span>
             <span id="AdressenAuswahlCount" class="alert alert-success margin-left-15 hide">
                 <i class="icon-check"></i><span class="padding-left-5 bold"></span>
             </span>
@@ -63,8 +63,8 @@
                 })
               )
 
-        <div class="form-actions">          
-            <button type="button" id="btnAddresseNeu" class="btn red" onclick="AddressNew();">@Localize.NewAddress</button>             
+        <div class="form-actions pull-left">          
+            <button type="button" id="btnAddresseNeu" class="btn blue" onclick="AddressNew();">@Localize.NewAddress</button>             
             <button type="button" id="btnAddresseLoeschen" class="btn yellow hide" onclick="AdressenLoeschen();">@Localize.Delete</button>
         </div>
     </div>
