--- a/Work/CarDocu/shell/UserControls/DocuGroup/ucScanDocu.xaml
+++ b/Work/CarDocu/shell/UserControls/DocuGroup/ucScanDocu.xaml
@@ -56,14 +56,28 @@
                             </ItemsControl>
 
                             <Border Background="Ivory" Visibility="{Binding ResultsAvailable, Converter={StaticResource BooleanVisibilityConverter}}" BorderBrush="Gray" BorderThickness="1" Margin="25,15,25,0">
-                                <StackPanel Orientation="Horizontal" Margin="15">
-                                    <TextBlock Text="{Binding ResultsTotalItems, StringFormat={}{0} gesamt}" Style="{StaticResource lbHeaderBig}" Foreground="Black" Margin="0,0,20,0" />
-                                    <TextBlock Text="{Binding ResultsGoodItems, StringFormat={}{0} Ok}" Style="{StaticResource lbHeaderBig}"  Foreground="Green" Margin="0,0,5,0" />
-                                    <TextBlock Text=" / " Style="{StaticResource lbHeaderBig}" Visibility="{Binding ResultsBadItems, Converter={StaticResource IntegerVisibilityConverter}}" Margin="0,0,5,0" />
-                                    <TextBlock Text="{Binding ResultsBadItems, StringFormat={}{0}x Klärfall}" Style="{StaticResource lbHeaderBig}" Visibility="{Binding ResultsBadItems, Converter={StaticResource IntegerVisibilityConverter}}" Foreground="DarkRed" Margin="0,0,5,0" />
+                                <StackPanel>
+                                    <StackPanel Orientation="Horizontal" Margin="15">
+                                        <TextBlock Text="{Binding ResultsTotalItems, StringFormat={}{0} gesamt}" Style="{StaticResource lbHeaderBig}" Foreground="Black" Margin="0,0,20,0" />
+                                        <TextBlock Text="{Binding ResultsGoodItems, StringFormat={}{0} Ok}" Style="{StaticResource lbHeaderBig}"  Foreground="Green" Margin="0,0,5,0" />
+                                        <TextBlock Text=" / " Style="{StaticResource lbHeaderBig}" Visibility="{Binding ResultsBadItems, Converter={StaticResource IntegerVisibilityConverter}}" Margin="0,0,5,0" />
+                                        <TextBlock Text="{Binding ResultsBadItems, StringFormat={}{0}x Klärfall}" Style="{StaticResource lbHeaderBig}" Visibility="{Binding ResultsBadItems, Converter={StaticResource IntegerVisibilityConverter}}" Foreground="DarkRed" Margin="0,0,5,0" />
 
-                                    <ContentPresenter Content="{StaticResource image/24x24/OK}" Visibility="{Binding ResultsBadItems, Converter={StaticResource IntegerVisibilityInverseConverter}}" Margin="15,0,0,0" />
-                                    <ContentPresenter Content="{StaticResource image/24x24/warning}" Visibility="{Binding ResultsBadItems, Converter={StaticResource IntegerVisibilityConverter}}" Opacity="0.5" Margin="15,0,0,0" />
+                                        <ContentPresenter Content="{StaticResource image/24x24/OK}" Visibility="{Binding ResultsBadItems, Converter={StaticResource IntegerVisibilityInverseConverter}}" Margin="15,0,0,0" />
+                                        <ContentPresenter Content="{StaticResource image/24x24/warning}" Visibility="{Binding ResultsBadItems, Converter={StaticResource IntegerVisibilityConverter}}" Opacity="1.0" Margin="15,0,0,0" />
+                                    </StackPanel>
+                                    <StackPanel Visibility="{Binding ResultsBadItems, Converter={StaticResource IntegerVisibilityConverter}}" Margin="15">
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock Margin="0,5,0,5" Style="{StaticResource lbHeaderBig}" Foreground="Red">
+                                                    Mindestens ein Teil-Scan war nicht erfolgreich!
+                                                    Der gesamte Stapel-Scan wird daher verworfen und muss erneut gescannt werden!
+                                            </TextBlock>
+                                        </StackPanel>
+                                        <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                                            <TextBlock Style="{StaticResource lbHeaderBig}" Foreground="Green">Letzter erfolgreich erkannter Barcode:</TextBlock>
+                                            <TextBlock Text="{Binding LastRecognizedBarcode}" Foreground="Green" Style="{StaticResource lbHeaderBig}" Margin="5,0,0,0" />
+                                        </StackPanel>
+                                    </StackPanel>
                                 </StackPanel>
                             </Border>
                         </StackPanel>
