--- a/inetpub/wwwroot/ServicesMvc/Views/Login/Partial/CustomerForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Login/Partial/CustomerForm.cshtml
@@ -5,101 +5,121 @@
         color: black !important;
     }
     
-    #Anrede {
-        width:100% !important;
-        height: 100% !important;
+    .login .content label {
+        color: #a9a9a9;
     }
+    
+    .login .content .control-group {
+        margin-bottom: 12px !important;
+    }
+    .login .content {
+        margin-top: 40px !important;
+        padding-top: 10px !important;
+
+    }
+    
+
+    .controls > .radio {
+        margin-top: 0 !important;
+    }
+
 </style>
 
 <div id="DivCustomerInfo">
 
-@using (Ajax.BeginForm("CustomerForm", "Login", null,
-                            new MvcAjaxOptions { UpdateTargetId = "DivCustomerInfo", OnComplete = "AjaxFormCustomerComplete();" },
-                            new { @class = "no-loading-indicator form-vertical login-form", id = "AjaxFormCustomer" }))
-{
+    @using (Ajax.BeginForm("CustomerForm", "Login", null,
+        new MvcAjaxOptions {UpdateTargetId = "DivCustomerInfo", OnComplete = "AjaxFormCustomerComplete();"},
+        new {@class = "no-loading-indicator form-vertical login-form", id = "AjaxFormCustomer"}))
+    {
 
-    <h3 class="form-title margin-bottom-10 margin-top-10">@Localize.PleaseEnterCustomerInfo</h3>
+        <h3 class="form-title margin-bottom-10 margin-top-10">@Localize.PleaseEnterCustomerInfo</h3>
 
-    @Html.HiddenFor(m => m.ModeCaptchaReset)  
+        @Html.HiddenFor(m => m.ModeCaptchaReset)
 
-    @Html.FormPlaceholderTextBoxFor(m => m.Firma, new { @class = "m-wrap" })
+        @Html.FormPlaceholderTextBoxFor(m => m.Firma, new {@class = "m-wrap"})
 
     @*@Html.FormPlaceholderTextBoxFor(m => m.Anrede, new {@class = "m-wrap help-inline" })*@
 
-    @Html.FormDropDownListFor(m => m.Anrede, CustomerModel.Anreden.ToSelectList(), new { @class = "m-wrap" })    
+        @Html.FormRadioButtonListFor(m => m.Anrede, CustomerModel.Anreden.ToSelectList(), new {@class = "m-wrap"}, labelHidden: true)
 
-    @Html.FormPlaceholderTextBoxFor(m => m.Vorname, new { @class = "m-wrap" })
+        @Html.FormPlaceholderTextBoxFor(m => m.Vorname, new {@class = "m-wrap"})
 
-    @Html.FormPlaceholderTextBoxFor(m => m.Name, new {@class = "m-wrap"})
+        @Html.FormPlaceholderTextBoxFor(m => m.Name, new {@class = "m-wrap"})
 
-    @Html.FormPlaceholderTextBoxFor(m => m.Referenzbenutzer, new { @class = "m-wrap" })
+        @Html.FormPlaceholderTextBoxFor(m => m.Referenzbenutzer, new {@class = "m-wrap"})
 
-    @Html.FormPlaceholderTextBoxFor(m => m.Telefon, new {@class = "m-wrap"})
+        @Html.FormPlaceholderTextBoxFor(m => m.Telefon, new {@class = "m-wrap"})
 
-    @Html.FormPlaceholderTextBoxFor(m => m.EMailAdresse, new {@class = "m-wrap placeholder-no-fix", autocomplete = "off"}, "icon-user")
+        @Html.FormPlaceholderTextBoxFor(m => m.EMailAdresse, new {@class = "m-wrap placeholder-no-fix", autocomplete = "off"}, "icon-user")
 
-    @Html.FormTextAreaFor(m => m.FrageProblem, new {@class = "m-wrap", placeholder = Localize.AddYourQuestionHere, id = "FrageProblem" })
+        @Html.FormTextAreaFor(m => m.FrageProblem, new {@class = "m-wrap", placeholder = Localize.AddYourQuestionHere, id = "FrageProblem"}, labelHidden: true)
 
-    <div class="captcha-wrapper">
-        <img src="~/Shared/Captcha?id=@Guid.NewGuid()" alt="captcha" class="captcha-image"/>
-        <span onclick="return ResetCaptcha();" class="btn blue mini">
+        <div class="captcha-wrapper">
+            <img src="~/Shared/Captcha?id=@Guid.NewGuid()" alt="captcha" class="captcha-image"/>
+            <span onclick="return ResetCaptcha();" class="btn blue mini">
             <i class="halflings-icon refresh white"></i>
         </span>
-    </div>
+        </div>
 
-    @Html.FormPlaceholderTextBoxFor(m => m.CaptchaText, new {@class = "m-wrap placeholder-no-fix", autocomplete = "off"}, "icon-picture")
-    
-    <div class="forget-password margin-top-10">
-        <button type="submit" class="btn green"> Absenden</button>     
-    </div>
-    <div class="forget-password margin-top-10">
-        <h4><a href="javascript:RedirectToLoginPage();" id="forget-password"><i class="icon-chevron-right"></i> @Localize.Login</a></h4>
-    </div>
+        @Html.FormPlaceholderTextBoxFor(m => m.CaptchaText, new {@class = "m-wrap placeholder-no-fix", autocomplete = "off"}, "icon-picture")
 
-    <script type="text/javascript">
-        
-        _modeCaptchaReset = @Model.ModeCaptchaReset.ToString().ToLower();
-        _modelIsValid = @Model.IsValid.ToString().ToLower();
+        <div class="forget-password margin-top-10">
+            <button type="submit" class="btn yellow" id="SendMailButton"> Absenden</button>
+        </div>
 
-        //alert(_modelIsValid);
-        //alert(_modeCaptchaReset);
+        <div class="alert alert-success hide" id="SentMessageSpan">
+            <i class="icon-check"></i><span class="padding-left-5"><strong>@Localize.ThankYou</strong>, @Localize.EmailAnfrageWeiterleitung</span>
+        </div>
 
-        if (_modelIsValid && !_modeCaptchaReset) {
-            location.replace("/ServicesMvc/Login");
-        }
+        <div class="forget-password margin-top-10">
+            <h4><a href="javascript:RedirectToLoginPage();" id="forget-password"><i class="icon-chevron-right"></i> @Localize.Login</a></h4>
+        </div>
 
-        $("#ModeCaptchaReset").val(false);
+        <script type="text/javascript">
 
-        $("label:contains('FrageProblem')").hide(true);
+            _modeCaptchaReset = @Model.ModeCaptchaReset.ToString().ToLower();
+            _modelIsValid = @Model.IsValid.ToString().ToLower();
 
-        function FormPreparePrivate() {
-            Login.init();
-        };
+            //alert(_modelIsValid);
+            //alert(_modeCaptchaReset);
 
-        function ResetCaptcha() {
-            $("#ModeCaptchaReset").val(true);
-            $("#AjaxFormCustomer").submit();
-            return false;
-        }
+            function FormPreparePrivate() {
+                Login.init();
+            };
 
-        function SubmitForm() {
-            $("#AjaxFormCustomer").submit();
-            return false;
-        }
+            function ResetCaptcha() {
+                $("#ModeCaptchaReset").val(true);
+                $("#AjaxFormCustomer").submit();
+                return false;
+            }
 
-        function AjaxFormCustomerComplete() {
-            FormPreparePrivateAjax();
-        }
+            function SubmitForm() {
+                $("#AjaxFormCustomer").submit();
+                return false;
+            }
 
-        function FormPreparePrivateAjax() {
-            FormPrepareAjax();
-        }
+            function AjaxFormCustomerComplete() {
+                FormPreparePrivateAjax();
+                
+                if (_modelIsValid) {
+                $("#SendMailButton").hide();
 
-        function RedirectToLoginPage() {
-            var redirectUrl = "/ServicesMvc/Login";
-            location.replace(redirectUrl);
-        }
+                $("#SentMessageSpan").show();
+                
+                setTimeout(RedirectToLoginPage, 3000);
+                }
+            }
 
-    </script>
-}
+            function FormPreparePrivateAjax() {
+                FormPrepareAjax();
+            }
+
+            function RedirectToLoginPage() {
+                var redirectUrl = "/ServicesMvc/Login";
+                location.replace(redirectUrl);
+            }
+
+        </script>
+    }
 </div>
+
